--- a/views/login.ejs
+++ b/views/login.ejs
@@ -53,11 +53,24 @@
 <body>
   <div class="container">
     <h1>Login</h1>
-    <form action="/" method="post">
+    <form action="/login" method="post">
       <input type="text" name="username" placeholder="Username" required>
       <input type="password" name="password" placeholder="Password" required>
       <input type="submit" value="Login">
     </form>
+    <p>
+      Don't have an account? <a href="/register">Register</a>
+    </p>
+    <% if (message) {
+      %>
+      <p>
+        <%= message %>
+      </p>
+      <%
+    } %>
   </div>
+<p>Don't have an account? <a href="/register">Register</a></p>
+
+  
 </body>
 </html>
