--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,15 +10,15 @@
       position: absolute;
       top: 40px;
       right: 10px;
-      width:60px;
+      width: 60px;
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>NEPALI CHAT</h1>
-    <button class="logout-button" onclick="window.location.href='/'">Logout</button>
-   
+    <h1>NEPALI CHAT</h1> Users:<span id="online-users"></span>
+    <button class="logout-button" onclick="window.location.href='/logout'">Logout</button>
+
     <div class="chat-window">
       <div class="messages"></div>
     </div>
@@ -37,7 +36,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script>
     const socket = io();
-    const username = '<%= user.username %>';
+    const username = '<%= user.username || "" %>';
 
 
     const messagesContainer = document.querySelector('.messages');
@@ -73,7 +72,7 @@
 
     socket.on("connection", (data)=> {
 
-      addMessageToUI(username, "connected to chat..", true);
+     if(username) addMessageToUI(username, "connected to chat..", true);
 
       socket.emit("user-connect", username);
     })
@@ -127,6 +126,16 @@
     function scrollToBottom() {
       messagesContainer.scrollTo(0, messagesContainer.scrollHeight);
     }
+    //show online users
+    socket.on('connection', (onlineUsers) => {
+      const onlineUsersList = document.getElementById('online-users');
+      onlineUsersList.innerHTML = onlineUsers;
+
+
+    });
+
+
+
 
   </script>
 </body>
