--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,53 +2,11 @@
 <html>
 <head>
   <title>Login Page</title>
-  <style>
-    body {
-      overflow: hidden;
-      margin: 0px;
-      padding: 0px;
-      background-image: url('https://i.etsystatic.com/9187257/r/il/39648b/3692410489/il_fullxfull.3692410489_b8u3.jpg');
-      background-size: cover;
-      background-position: center;
-      font-family: Arial, sans-serif;
-    }
-    .container {
-      margin-bottom: 40px;
-      background-color: #2c6472;
 
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
-      height: 100vh;
-      max-width: 400px;
-      padding: 20px;
-      text-align: center;
-      opacity: .8;
 
-    }
-    input[type="text"], input[type="password"] {
-      border: none;
-      border-radius: 5px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
-      margin: 10px auto;
-      padding: 10px;
-      width: 95%;
-      background-color: #d6f1f8;
-    }
-    input[type="submit"] {
-      background-color: #4CAF50;
-      border: none;
-      border-radius: 5px;
-      color: white;
-      cursor: pointer;
-      margin-top: 10px;
-      padding: 10px;
-      width: 100%;
+ <link rel="stylesheet" type="text/css" href="/css/login.css">
 
-    }
-    input[type="submit"]:hover {
-      background-color: #3E8E41;
-    }
 
-  </style>
 </head>
 <body>
   <div class="container">
