--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body {
 
   margin: 0;
   padding: 0;
+  background:brown;
 }
 
 .container {
@@ -30,10 +31,13 @@ body {
 }
 
 .message {
+
+
   word-wrap: break-word;
   margin-bottom: 10px;
   display: flex;
-  min-width:60px;
+  min-width: 60px;
+  align-content: center;
 }
 
 .username {
@@ -59,10 +63,16 @@ body {
 }
 
 .message-text {
-  background-color: #f1f0f0;
+  background-color: white;
   padding: 10px;
   border-radius: 10px;
   max-width: 70%;
+  border: none;
+  margin: 2px;
+  box-shadow: 0px 0px 10px 1px grey;
+
+
+
 }
 
 .message-text.me {
@@ -124,8 +134,11 @@ h1 {
   button {
     width: 40%;
   }
-  .message{
-    min-width:100px;
+  .message {
+    min-width: 100px;
   }
 }
 
+.name {
+  color: black;
+}
